[project]
name = "HedgeMind"
version = "1.0.0"
description = "A real-world OpenEnv environment simulating a hedge fund."
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.2",
    "numpy>=1.26.4",
    "openai>=1.14.3",
    "requests>=2.31.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
